fix bug 117422. a=asa r=jkeiser sr=jst make the fallback handling of unicode converter compatable with IE6.